Fix T60124: Multires modifier not reading data from external files